# magister

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SPEC.md  renovate.json
apps/api/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_foundation.py  0002_classes.py  0003_class_teacher_roles.py  0004_class_memberships.py  0005_local_admin.py  0006_app_settings.py  0007_user_attrs.py  0008_computers_search_base.py  0009_import_jobs.py  0010_ad_sync_state.py  0011_audit_key_id.py  0012_class_details.py  0013_user_preferences.py  0014_subject_teacher_roles.py  0015_provisioning_ous.py  0016_zyklus_boundaries.py  0017_ad_bind_mode.py  0018_ad_tls.py  0019_ad_login.py  0020_devices.py  0021_class_grade_range.py  0022_school_details.py  0023_student_jahrgangsstufe.py  0024_ad_pw_flags.py  0025_password_vault.py  0026_ad_group_templates.py  0027_ad_group_catalog.py  0028_device_is_loan.py  0029_device_assignment_history.py  0030_web_tls_cert.py  0031_school_ad_provisioning.py
apps/api/magister_api/: __init__.py  config.py  db.py  logging_config.py  main.py
apps/api/magister_api/ad/: __init__.py  _wordlist_de.py  client.py  errors.py  ou.py  password.py  security_descriptor.py
apps/api/magister_api/audit/: __init__.py  allowlist.py  middleware.py  service.py
apps/api/magister_api/auth/: __init__.py  bootstrap.py  class_perm.py  csrf.py  current_user.py  effective_settings.py  oidc.py  passwords.py  rbac.py  sessions.py
apps/api/magister_api/cache/: __init__.py  ttl.py
apps/api/magister_api/cli/: __init__.py  hash_password.py  seed_demo.py
apps/api/magister_api/letters/: __init__.py  translations.py
apps/api/magister_api/models/: __init__.py  ad_group.py  ad_sync_state.py  app_settings.py  audit.py  auth.py  base.py  class_membership.py  class_teacher_role.py  device.py  device_assignment.py  import_job.py  local_admin.py  school.py  school_class.py  subject_teacher_role.py  user_preferences.py
apps/api/magister_api/repositories/: __init__.py  ad_groups.py  ad_users.py  auth.py  base.py  class_memberships.py  class_teachers.py  classes.py  devices.py  local_admin.py  reports.py  schools.py  subject_teachers.py  user_preferences.py
apps/api/magister_api/routers/: __init__.py  _helpers.py  admin_ad_groups.py  admin_local_admin.py  admin_maintenance.py  admin_roles.py  admin_settings.py  admin_sync.py  admin_system.py  admin_users.py  audit.py  auth.py  class_memberships.py  class_teachers.py  classes.py  devices.py  imports.py  letters.py  me.py  privacy.py  reports.py  schools.py  student_password_reset.py  subject_teachers.py  substitutions.py  teacher_password_reset.py  user_settings.py  users.py
apps/api/magister_api/schemas/: __init__.py  ad_groups.py  ad_users.py  app_settings.py  audit.py  auth.py  class_memberships.py  class_teachers.py  classes.py  common.py  devices.py  imports.py  local_admin.py  my_students.py  password_reset.py  reports.py  roles.py  schools.py  subject_teachers.py  system_ops.py  user_admin.py  user_attrs.py  user_dashboard.py  user_lifecycle.py  user_preferences.py  user_settings.py
apps/api/magister_api/services/: __init__.py  _user_enrich.py  ad_sync.py  ad_sync_scheduler.py  ad_users.py  app_settings.py  auth.py  class_memberships.py  class_password_list.py  class_teachers.py  classes.py  credential_pdf.py  demo_data.py  devices.py  group_reassign.py  handouts.py  imports.py  letters.py  local_admin.py  my_students.py  password_vault.py  privacy.py  schools.py  student_password_reset.py  subject_teachers.py  system_ops.py  teacher_password_reset.py  user_admin.py  user_attrs.py  user_dashboard.py  user_groups.py  user_lifecycle.py  user_preferences.py  web_tls.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: _helpers.py  conftest.py  test_ad_sync.py  test_ad_sync_scheduler.py  test_ad_test_endpoint.py  test_admin_local_admin_router.py  test_admin_settings_router.py  test_admin_system.py  test_admin_user_admin.py  test_app_settings_service.py  test_audit_listing.py  test_audit_pgcrypto.py  test_audit_reset.py  test_auth_flow.py  test_bootstrap.py  test_class_advance_devices.py  test_class_memberships.py  test_class_promote.py  test_class_teachers.py  test_classes.py  test_device_history.py  test_device_sync.py  test_devices.py  test_group_reassign.py  test_import_password_vault.py  test_imports.py  test_letters.py  test_lifespan_seed_local_admin.py  test_local_admin_service.py  test_local_login_router.py  test_me_preferences.py  test_privacy.py  test_rename_integrity.py  test_reports.py  test_school_scope.py  test_schools_router.py  test_student_password_reset.py  test_student_provisioning.py  test_subject_teachers.py  test_substitutions_router.py  (+9 more)
apps/api/tests/unit/: test_ad_bind_mode.py  test_ad_client.py  test_ad_error_classification.py  test_ad_login_group.py  test_ad_tls.py  test_audit_allowlist.py  test_cache_ttl.py  test_class_memberships_schemas.py  test_class_teachers_schemas.py  test_classes_schemas.py  test_cli_hash_password.py  test_create_user_best_effort.py  test_csrf.py  test_handouts_audience.py  test_logging_redaction.py  test_ou_selection.py  test_password_generator.py  test_passwords.py  test_rbac.py  test_repository_scope.py  test_security_descriptor.py  test_sync_failure_classification.py  test_user_attrs_schema.py  test_validators.py  test_web_tls.py
cockpit/api/: Dockerfile  alembic.ini  pyproject.toml
cockpit/api/alembic/: env.py
cockpit/api/alembic/versions/: 0001_initial.py  0002_update_requests.py  0003_service_tokens.py
cockpit/api/cockpit_api/: auth.py  config.py  db.py  main.py
cockpit/api/cockpit_api/models/: __init__.py  (+3 more)
cockpit/api/tests/: test_health.py  test_service_tokens.py  test_update_requests.py
cockpit/runner/: README.md  pyproject.toml
cockpit/runner/cockpit_runner/: cockpit_client.py  config.py  executor.py  main.py
cockpit/runner/systemd/: cockpit-runner.service
cockpit/runner/tests/: test_cockpit_client.py
(+158 files in other folders)
