[project]
name = "magister-api"
version = "0.1.0"
description = "Magister backend — user & class management for schools (Schola Levis / Vita Brevis)"
readme = "../../README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Vita Brevis GmbH" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "authlib>=1.3",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "ldap3>=2.9",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "pyright>=1.1.370",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magister_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # bugbear
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "T20",   # flake8-print (forbid print)
    "S",     # bandit
    "ASYNC", # async/await pitfalls
]
ignore = [
    "S101",  # asserts in tests are fine
    "B008",  # Depends() in default args is the FastAPI idiom
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S311"]
"alembic/**/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["magister_api", "tests"]
exclude = ["**/__pycache__", "alembic/versions"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
# Routes/handlers registered via decorators look "unused" — pyright can't see the registration.
reportUnusedFunction = "none"
reportPrivateUsage = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "postgres: integration test that requires PostgreSQL with pgcrypto (env MAGISTER_TEST_DATABASE_URL)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
