[project]
name = "magister-api"
version = "0.1.0"
description = "Magister backend — user & class management for schools (Schola Levis / Vita Brevis)"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Vita Brevis GmbH" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "asyncpg>=0.29",
    "authlib>=1.3",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "jinja2>=3.1",
    "ldap3>=2.9",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "weasyprint>=62.3",
]

[project.optional-dependencies]
# Kerberos/GSSAPI service bind (MAGISTER_AD_BIND_MODE=gssapi). Optional so the
# default image/CI need no krb5 build toolchain; the production image installs
# this extra + krb5 system libs (see docs/runbooks/ad-gssapi-bind.md).
gssapi = [
    "gssapi>=1.8",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    # Linters pinned exactly: their output is version-sensitive, so a loose
    # range lets a dev's local ruff/pyright disagree with backend-ci (this is
    # how PR #24 landed unformatted). Keep in lockstep with the CI versions.
    "ruff==0.15.12",
    "pyright==1.1.409",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["magister_api"]

[tool.hatch.build.targets.wheel.force-include]
"magister_api/letters/templates" = "magister_api/letters/templates"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # bugbear
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "T20",   # flake8-print (forbid print)
    "S",     # bandit
    "ASYNC", # async/await pitfalls
]
ignore = [
    "S101",  # asserts in tests are fine
    "B008",  # Depends() in default args is the FastAPI idiom
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S107", "S311"]
"alembic/**/*.py" = ["E501"]
# CLI subcommands legitimately print to stdout — that's the whole point.
"magister_api/cli/**/*.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["magister_api", "tests"]
exclude = ["**/__pycache__", "alembic/versions"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false
# Routes/handlers registered via decorators look "unused" — pyright can't see the registration.
reportUnusedFunction = "none"
reportPrivateUsage = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "postgres: integration test that requires PostgreSQL with pgcrypto (env MAGISTER_TEST_DATABASE_URL)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
