[project]
name = "cockpit-api"
version = "0.1.0"
description = "Vita Brevis Cockpit — internal ops API for managing Magister instances"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.13",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "pyright>=1.1",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.extend-per-file-ignores]
"cockpit_api/routers/*.py" = ["B008"]
"cockpit_api/auth.py" = ["B008"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cockpit_api"]
